v0.5.x/_sources/reference/fury.primitive.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`primitive`
================
.. automodule:: fury.primitive

.. currentmodule:: fury.primitive
.. autosummary::

   ConvexHull
   cart2sphere
   euler_matrix
   faces_from_sphere_vertices
   fix_winding_order
   pjoin
   prim_box
   prim_icosahedron
   prim_sphere
   prim_square
   prim_superquadric
   prim_tetrahedron
   repeat_primitive
   repeat_primitive_function


.. currentmodule:: fury.primitive


:class:`ConvexHull`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConvexHull
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

cart2sphere
~~~~~~~~~~~

.. autofunction:: cart2sphere

euler_matrix
~~~~~~~~~~~~

.. autofunction:: euler_matrix

faces_from_sphere_vertices
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: faces_from_sphere_vertices

fix_winding_order
~~~~~~~~~~~~~~~~~

.. autofunction:: fix_winding_order

pjoin
~~~~~

.. autofunction:: pjoin

prim_box
~~~~~~~~

.. autofunction:: prim_box

prim_icosahedron
~~~~~~~~~~~~~~~~

.. autofunction:: prim_icosahedron

prim_sphere
~~~~~~~~~~~

.. autofunction:: prim_sphere

prim_square
~~~~~~~~~~~

.. autofunction:: prim_square

prim_superquadric
~~~~~~~~~~~~~~~~~

.. autofunction:: prim_superquadric

prim_tetrahedron
~~~~~~~~~~~~~~~~

.. autofunction:: prim_tetrahedron

repeat_primitive
~~~~~~~~~~~~~~~~

.. autofunction:: repeat_primitive

repeat_primitive_function
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: repeat_primitive_function

