v0.7.x/_sources/reference/fury.primitive.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`primitive`
================
.. automodule:: fury.primitive

.. currentmodule:: fury.primitive
.. autosummary::

   ConvexHull
   LooseVersion
   cart2sphere
   faces_from_sphere_vertices
   fix_winding_order
   pjoin
   prim_box
   prim_cylinder
   prim_frustum
   prim_icosahedron
   prim_octagonalprism
   prim_rhombicuboctahedron
   prim_sphere
   prim_square
   prim_star
   prim_superquadric
   prim_tetrahedron
   repeat_primitive
   repeat_primitive_function


.. currentmodule:: fury.primitive


:class:`ConvexHull`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConvexHull
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LooseVersion`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LooseVersion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

cart2sphere
~~~~~~~~~~~

.. autofunction:: cart2sphere

faces_from_sphere_vertices
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: faces_from_sphere_vertices

fix_winding_order
~~~~~~~~~~~~~~~~~

.. autofunction:: fix_winding_order

pjoin
~~~~~

.. autofunction:: pjoin

prim_box
~~~~~~~~

.. autofunction:: prim_box

prim_cylinder
~~~~~~~~~~~~~

.. autofunction:: prim_cylinder

prim_frustum
~~~~~~~~~~~~

.. autofunction:: prim_frustum

prim_icosahedron
~~~~~~~~~~~~~~~~

.. autofunction:: prim_icosahedron

prim_octagonalprism
~~~~~~~~~~~~~~~~~~~

.. autofunction:: prim_octagonalprism

prim_rhombicuboctahedron
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: prim_rhombicuboctahedron

prim_sphere
~~~~~~~~~~~

.. autofunction:: prim_sphere

prim_square
~~~~~~~~~~~

.. autofunction:: prim_square

prim_star
~~~~~~~~~

.. autofunction:: prim_star

prim_superquadric
~~~~~~~~~~~~~~~~~

.. autofunction:: prim_superquadric

prim_tetrahedron
~~~~~~~~~~~~~~~~

.. autofunction:: prim_tetrahedron

repeat_primitive
~~~~~~~~~~~~~~~~

.. autofunction:: repeat_primitive

repeat_primitive_function
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: repeat_primitive_function

